Fix OLED display and page loading issues - Fixed LV_COLOR_DEPTH from 16 to 1 for monochrome OLED - Fixed disp_flush_cb to use pixel-by-pixel rendering instead of XBM - Fixed AppFactory class name mismatch (StartUp vs Startup) - Fixed HAL_Power Pin 255 ADC error - Updated StatusBar with font size 16

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ lib_deps =
     ErtugrulKra/ESP-Music@^1.0.0
 
 build_flags = 
-	-D USE_TEST
+	;-D USE_TEST
     ;-D ENABLE_AUTO_OTA_CHECK
     -D BOARD_ESP32DR
     ;-D USE_SCREEN_SSD1306
